@@ -19,10 +19,10 @@
 
 Require Import Decidable DecidableTypeEx FSetFacts.
 
-(** First, a version for Weak Sets *)
+(** First, a version for Weak Sets in functorial presentation *)
 
-Module WDecide (E : DecidableType)(Import M : WSfun E).
- Module F := FSetFacts.WFacts E M.
+Module WDecide_fun (E : DecidableType)(Import M : WSfun E).
+ Module F := FSetFacts.WFacts_fun E M.
 
 (** * Overview
     This functor defines the tactic [fsetdec], which will
@@ -851,15 +851,14 @@ the above form:
 
   End FSetDecideTestCases.
 
-End WDecide.
+End WDecide_fun.
 
 Require Import FSetInterface.
 
-(** Now comes a special version dedicated to full sets. For this 
-    one, only one argument [(M:S)] is necessary. *)
+(** Now comes variants for self-contained weak sets and for full sets.
+    For these variants, only one argument is necessary. Thanks to
+    the subtyping [WS<=S], the [Decide] functor which is meant to be
+    used on modules [(M:S)] can simply be an alias of [WDecide]. *)
 
-Module Decide (M : S).
-  Module D:=OT_as_DT M.E.
-  Module WD := WDecide D M.
-  Ltac fsetdec := WD.fsetdec.
-End Decide.
+Module WDecide (M:WS) := WDecide_fun M.E M.
+Module Decide := WDecide.
