@@ -15,7 +15,8 @@
 
 Require Import OrderedType.
 
-(** * An alternative (but equivalent) presentation for an Ordered Type inferface. *)
+(** * An alternative (but equivalent) presentation for an Ordered Type
+   inferface. *)
 
 (** NB: [comparison], defined in [Datatypes.v] is [Eq|Lt|Gt]
 whereas [compare], defined in [OrderedType.v] is [EQ _ | LT _ | GT _ ] 
@@ -79,6 +80,12 @@ Module OrderedType_from_Alt (O:OrderedTypeAlt) <: OrderedType.
  apply LT; auto.
  apply GT; red.
  rewrite compare_sym; rewrite H; auto.
+ Defined.
+
+ Definition eq_dec : forall x y, { eq x y } + { ~ eq x y }.
+ Proof.
+ intros; unfold eq.
+ case (x ?= y); [ left | right | right ]; auto; discriminate.
  Defined.
 
 End OrderedType_from_Alt. 
